# redis-bridge

./: .gitignore  Cargo.toml  Justfile  README.md
src/: api_client.rs  app.rs  config.rs  jwt.rs  lib.rs  main.rs  redis_subscriber.rs  schemas.rs
tests/: api_client_integration_tests.rs  redis_mock_tests.rs  test_api_client_creation.rs  test_api_client_custom_config.rs  test_api_client_get_auth_token_jwt.rs  test_api_client_get_auth_token_predefined.rs  test_api_client_predefined_token_fallback_to_jwt.rs  test_api_error_display.rs  test_api_error_jwt_display.rs  test_authentication_values.rs  test_create_tool_error_empty_body.rs  test_create_tool_from_json_wrapped.rs  test_custom_config_via_cli.rs  test_default_config.rs  test_gateway_base_url_trims_slashes.rs  test_handle_message.rs  test_jwt_config_default_uses_env_or_fallbacks.rs  test_jwt_custom_config.rs  test_jwt_different_secrets_produce_different_tokens.rs  test_jwt_error_display.rs  test_jwt_generation.rs  test_jwt_unique_jti.rs  test_log_startup.rs  test_main_functions.rs  test_mock_buffer_clear.rs  test_mock_buffer_records_commands.rs  test_mock_custom_tool_notification.rs  test_mock_echo_returns_args.rs  test_mock_pipeline_with_echo.rs  test_mock_publish_with_buffer.rs  test_mock_simple_map_clear.rs  test_mock_simple_map_del.rs  test_mock_simple_map_json_message.rs  test_mock_simple_map_multiple_keys.rs  test_mock_simple_map_set_get.rs  test_mock_subscribe_with_buffer.rs  test_predefined_token_flag.rs  test_redis_error_display.rs  test_redis_subscriber_new.rs  test_redis_subscriber_run.rs  (+11 more)
tests/redis/: test_mock_pipeline_with_echo.rs  test_mock_simple_map_multiple_keys.rs  test_mock_simple_map_set_get.rs  test_mock_subscribe_with_buffer.rs  test_redis_error_display.rs  test_redis_subscriber_new.rs
