[package]
name = "redis-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
fred = { version = "10", features = ["mocks", "i-streams", "subscriber-client"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
serial_test = "3"

[[test]]
name = "test_main_functions"
harness = true
